load("@rules_python//python:packaging.bzl", "py_package", "py_wheel")

py_wheel(
    name = "jucli_wheel",
    console_scripts = {
        "jucli": "jucli.main:main",
    },
    distribution = "jucli",
    python_tag = "py3",
    requires_file = "//jucli:requirements.in",
    version = "0.0.1",
    deps = [
        "//jucli:main",
        "//jucli/lib",
        "//jucli/lib/cli",
    ],
)
