load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_binary")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    extra_args = ["--resolver=backtracking"],
    requirements_txt = "requirements.txt",
)

exports_files([
    "requirements.txt",
    "requirements.in",  # This is used by py_wheel
])

py_binary(
    name = "main",
    srcs = ["main.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//jucli/cli",
    ],
)
