load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
  name = "lib",
  srcs = [
    "cli.py",
    "options.py",
    "jupyterhub.py",
    "jupyterserver.py",
    "hub.py",
    "server.py",
  ],
  deps = [
    requirement("click"),
    requirement("aiohttp"),
  ],
  visibility = ["//visibility:public"],
)
