load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "cli",
    srcs = [
        "cli.py",
        "utils.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("rich-click"),
        requirement("aiohttp"),
        requirement("rich"),
        "//jucli/lib",
    ],
)
