load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "lib",
    srcs = [
        "jupyterhub.py",
        "jupyterserver.py",
        "options.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("aiohttp"),
    ],
)
