load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "lib",
    srcs = [
        "__init__.py",
        "hub.py",
        "kernel.py",
        "kernel_connection.py",
        "server.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        requirement("aiohttp"),
    ],
)
