load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@mypy_pip//:requirements.bzl", "requirement")

compile_pip_requirements(
  name = "requirements",
  src = "requirements.in",
  extra_args = ["--resolver=backtracking"],
  requirements_txt = "requirements.txt",
)

alias(
  name = "mypy",
  actual = requirement("mypy"),
  visibility = ["//visibility:public"],
)

exports_files([
  "requirement.txt",
  "mypy.ini",
])
